Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35704

Error message mispelled when altering table engine to MEMORY

    XMLWordPrintable

Details

    Description

      SET max_heap_table_size=1048576;
      SET tmp_table_size=1048576;
       
      MariaDB [db01]> create or replace temporary table tempo1 (id int, info varchar(256)) engine=memory;
      Query OK, 0 rows affected (0,001 sec)
       
      MariaDB [db01]> insert into tempo1 select 1111111,'Silent, silent night, Quench the holy light Of thy torches bright; For possessed of Day Thousand spirits stray That sweet joys betray. Why should joys be sweet Used with deceit, Nor with sorrows meet? But an honest joy Does itself destroy For a harlot coy.'
          -> ;
      Query OK, 1 row affected (0,000 sec)
      Records: 1  Duplicates: 0  Warnings: 0
       
      MariaDB [db01]> insert into tempo1 select * from tempo1;
      Query OK, 1 row affected (0,000 sec)
      Records: 1  Duplicates: 0  Warnings: 0
       
      MariaDB [db01]> insert into tempo1 select * from tempo1;
      Query OK, 2 rows affected (0,000 sec)
      Records: 2  Duplicates: 0  Warnings: 0
      ...
      ...
      MariaDB [db01]> insert into tempo1 select * from tempo1;
      Query OK, 1024 rows affected (0,002 sec)
      Records: 1024  Duplicates: 0  Warnings: 0
       
      MariaDB [db01]> insert into tempo1 select * from tempo1;
      ERROR 1114 (HY000): The table 'tempo1' is full
       
      MariaDB [db01]> alter table tempo1 engine=innodb;
      Query OK, 3849 rows affected (0,008 sec)               
      Records: 3849  Duplicates: 0  Warnings: 0
       
      MariaDB [db01]> insert into tempo1 select * from tempo1;
      Query OK, 3849 rows affected (0,010 sec)
      Records: 3849  Duplicates: 0  Warnings: 0
       
      MariaDB [db01]> alter table tempo1 engine=memory;
      ERROR 1114 (HY000): The table 'tempo1' is fulltage done
      
      

      The table 'tempo1' is fulltage done

      Attachments

        Activity

          People

            serg Sergei Golubchik
            claudio.nanni Claudio Nanni
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.