MDEV-35704 Error message mispelled when altering table engine to MEMORY

reset progress report output before printing the error message.
need to flush(stdout), because error message goes to stderr